# pyMON

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_GUIDE.md  INSTALLATION.md  PYMON_FINAL.md  PYMON_PYTHON_NATIVE.md  PYMON_USAGE.md  PY_SOLC_X_USAGE.md  QUICKSTART.md  README.md  SOLUTION_EVM_BYTECODE.md  TRANSPILER_IMPROVEMENTS.md  WALLET_SETUP_GUIDE.md  pymon.bat  pymon_config.json  pyproject.toml  requirements.txt  setup.py  test_solidity.py
contracts/: Counter.py  SimpleStorage.py
examples/: pymon_examples.py  stake_token_examples.py
ii/scripts/: deploy.py
my1/: pymon_config.json
my1/scripts/: deploy.py
my_project/contracts/: SimpleStorage.py
my_project/scripts/: deploy.py
new/: DEPLOYMENT_SUMMARY.md  PYTOKEN_DEPLOYED.md  STAKING_CONTRACT_DEPLOYED.md
new/contracts/: Counter.py  PyToken.py  StakingRewards.py  Voting.py  op.py
new/scripts/: deploy.py
pymon/: __init__.py  auditor.py  cli.py  compiler.py  compiler_old.py  deployer.py  env_loader.py  evm_compiler.py  gas_estimator.py  interactor.py  solidity_support.py  transpiler_enhanced.py  wallet.py
